<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/backgroung_list"
    android:layout_margin="4dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="@+id/img_avatar" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="60dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:maxLines="1"
        android:text="@string/company"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:maxLines="1"
        android:layout_marginStart="8dp"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="@+id/tv_company"
        app:layout_constraintStart_toEndOf="@+id/tv_company" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="60dp"
        android:visibility="gone"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/follower"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repository"
        app:layout_constraintStart_toEndOf="@+id/tv_repository" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="60dp"
        android:visibility="gone"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintStart_toEndOf="@+id/tv_followers" />
</androidx.constraintlayout.widget.ConstraintLayout>